--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,84 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/assets/css/site.css">
-    <link rel="shortcut icon" type="image/png" href="/assets/img/favicon.png">
-    <title>{{site.title}}</title>
-  </head>
-  <body>
+---
+layout: base
+---
 
-    <header class="navbar navbar-light navbar-toggleable-md">
-      <nav class="container">
-        <div class="d-flex justify-content-between hidden-lg-up">
-          <a class="navbar-brand" href="/">TensorFlow Patterns</a>
-          <button
-             class="navbar-toggler"
-             type="button"
-             data-toggle="collapse"
-             data-target="#main-nav"
-             aria-controls="main-nav"
-             aria-expanded="false"
-             aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-        </div>
-        <div class="collapse navbar-collapse" id="main-nav">
-          {% include navbar.html %}
-        </div>
-      </nav>
-    </header>
+<div class="pageheader">
+  <div class="container">
+    <h1>{{page.title}}</h1>
+    <p class="lead">{{page.description}}</p>
+  </div>
+</div>
 
-    <div class="pageheader">
-      <div class="container">
-        <h1>{{page.title}}</h1>
-        <p class="lead">{{page.description}}</p>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="row">
-        <div class="col-12 col-md-9">
-          {{content}}
-        </div>
-        <div class="col-12 col-md-3">
-          <div class="card">
-            <div class="card-header">Project Activity</div>
-            <div class="card-block">
-              <div id="project-activity"></div>
-            </div>
-            <div class="card-footer">
-              <a href="https://github.com/guildai/tensorflow-patterns/commits/master"
-                 target="_blank">See all project commits</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <footer class="fixed-bottom">
-      <div class="container">
-        {% include footer-links.html %}
-        {% include creative-commons.html %}
-      </div>
-    </footer>
-
-    <script src="/assets/js/jquery-3.1.1.min.js"></script>
-    <script src="/assets/js/tether.min.js"></script>
-    <script src="/assets/js/bootstrap.min.js"></script>
-    <script src="/assets/js/github.commits.widget.js"></script>
-    <script>
-     $(function() {
-         $('#project-activity').githubInfoWidget({
-             user: 'guildai',
-             repo: 'tensorflow-patterns',
-             branch: 'master'
-         });
-     });
-    </script>
-
-  </body>
-</html>
+<div class="container">{{content}}</div>
