--- a/_layouts/pattern.html
+++ b/_layouts/pattern.html
@@ -5,8 +5,14 @@ layout: base
 <div class="pageheader">
   <div class="container">
     <h1>{{page.title}}</h1>
-    <p class="lead">{{page.description}}</p>
+    <p class="lead">{{page.summary}}</p>
   </div>
 </div>
 
-<div class="container">{{content}}</div>
+<div class="container">
+  <nav class="breadcrumb">
+    <a class="breadcrumb-item" href="/patterns/">All patterns</a>
+    <a class="breadcrumb-item active" href="{{page.url}}">{{page.title}}</a>
+  </nav>
+  {{content}}
+</div>
