--- a/_includes/creative-commons.html
+++ b/_includes/creative-commons.html
@@ -1,5 +1,5 @@
 <div class="d-flex align-items-center license">
-  <div class="">
+  <div>
     <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
       <img
         alt="Creative Commons License"
