--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -53,5 +53,9 @@
      });
     </script>
 
+    <script src="//static.getclicky.com/js" type="text/javascript"></script>
+    <script type="text/javascript">try{ clicky.init(101024160); }catch(e){}</script>
+    <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101024160ns.gif" /></p></noscript>
+
   </body>
 </html>
