--- a/_includes/content/goals.html
+++ b/_includes/content/goals.html
@@ -1,1 +1,20 @@
-List ze goals yo.
+<p>
+  TensorFlow Patterns is a collection of <em>patterns</em> in the
+  spirit of Christopher
+  Alexanders <a href="https://en.wikipedia.org/wiki/The_Timeless_Way_of_Building">Timeless
+  Way of Building</a>. The project seeks to catalog developer
+  experience and distill patterns that can improve our use of
+  TensorFlow.
+</p>
+
+<p>
+  Start by checking out the <a href="/patterns/">patterns</a>. If you
+  see some that you like, try them and see what you think!
+</p>
+
+<p>
+  This is a 100% open community project that encourages contributions
+  from any and all. If you'd like to contribute please check out our
+  super straight forward
+  <a href="/contribute/">contribution policy</a>.
+</p>
