--- a/_includes/content/method.html
+++ b/_includes/content/method.html
@@ -1,1 +1,42 @@
-Information about the method yo.
+<p>
+  Alexander's method for identifying and describing patterns centers
+  on human emotions rather than design philosophies or edicts. In
+  that spirit, we outline a simple method for the patterns:
+</p>
+
+<ul class="compact">
+<li>A pattern should be <em>used</em> and something you
+can <em>observe</em></li>
+
+<li>A pattern should be <em>repeated</em> over enough time to inform your
+<em>experience</em></li>
+
+<li>A pattern must feel good when used <i class="fa fa-smile-o"></i></li>
+
+<li>In some cases a pattern may be based on abstract thought without
+experience</li>
+
+</ul>
+
+<p>Every pattern must be defined with the following:</p>
+
+<ul class="compact">
+<li>Name</li>
+<li>Scope (see our <a href="/scopes/">working list of scopes</a>)</li>
+<li>One line summary of the pattern</li>
+<li>Detailed description of the pattern including why the pattern is
+  good and where it should be used</li>
+</ul>
+
+<p>Patterns may also include:</p>
+
+<ul class="compact">
+  <li>Illustrations to clarify the pattern</li>
+  <li>Sample source code</li>
+  <li>References to supporting matterial</li>
+  <li>Links to related or alternative/competing patterns</li>
+</ul>
+
+<p>When creating patterns, start with
+the <a href="https://raw.githubusercontent.com/guildai/tensorflow-patterns/master/pattern.md.in">Pattern
+Template</a> and make changes as needed.</p>
