--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -24,14 +24,8 @@ layout: base
       {% include content/method.html %}
     </div>
     <div class="col-lg-4">
-      <h2>Recent Patterns</h2>
-      <p>Not sure how to get these in here.</p>
+      <h2>Popular patterns</h2>
+      {% include content/popular.html %}
     </div>
   </div>
 </div>
-
-<!--
-<div class="container">
-  {{content}}
-</div>
--->
