--- a/_layouts/pattern.html
+++ b/_layouts/pattern.html
@@ -4,7 +4,13 @@ layout: base
 
 <div class="pageheader">
   <div class="container">
-    <h1>{{page.title}}</h1>
+
+    <div class="d-flex justify-content-start align-items-center">
+      <div>
+        <h1>{{page.title}}</h1>
+      </div>
+      <div class="ml-auto pattern-scope"><a href="/scopes/#{{page.scope|slugify}}">{{page.scope}}</a></div>
+    </div>
     <p class="lead">{{page.summary}}</p>
   </div>
 </div>
