--- a/_includes/content/about.html
+++ b/_includes/content/about.html
@@ -1,10 +1,10 @@
 <p>
   TensorFlow Patterns is a collection of <em>patterns</em> in the
   spirit of Christopher
-  Alexanders <a href="https://en.wikipedia.org/wiki/The_Timeless_Way_of_Building">Timeless
-  Way of Building</a>. The project seeks to catalog developer
-  experience and distill patterns that can improve our use of
-  TensorFlow.
+  Alexanders <a href="https://en.wikipedia.org/wiki/The_Timeless_Way_of_Building"
+  target="_blank">Timeless Way of Building</a>. The project seeks to
+  catalog developer experience and distill patterns that can improve
+  our use of TensorFlow.
 </p>
 
 <p>
