--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -16,8 +16,8 @@ layout: base
 <div class="container">
   <div class="row">
     <div class="col-lg-4">
-      <h2>Goals</h2>
-      {% include content/goals.html %}
+      <h2>About</h2>
+      {% include content/about.html %}
     </div>
     <div class="col-lg-4">
       <h2>Method</h2>
