--- a/_layouts/pattern.html
+++ b/_layouts/pattern.html
@@ -9,7 +9,9 @@ layout: base
       <div>
         <h1>{{page.title}}</h1>
       </div>
-      <div class="ml-auto pattern-scope"><a href="/scopes/#{{page.scope|slugify}}">{{page.scope}}</a></div>
+      <div class="ml-4 pattern-scope">
+	<a href="/scopes/#{{page.scope|slugify}}">{{page.scope}}</a>
+      </div>
     </div>
     <p class="lead">{{page.summary}}</p>
   </div>
