Filling in initial content

--- a/_includes/content/about.html
+++ b/_includes/content/about.html
@@ -9,12 +9,13 @@
 
 <p>
   Start by checking out the <a href="/patterns/">patterns</a>. If you
-  see some that you like, try them and see what you think!
+  see some that you like, try them and experience them directly. If
+  you have some experience to share, it's easy to contribute back!
 </p>
 
 <p>
-  This is a 100% open community project that encourages contributions
-  from any and all. If you'd like to contribute please check out our
-  super straight forward
+  TensorFlow Patterns is an open community project that encourages
+  contributions from any and all. If you'd like to contribute please
+  check out the project's super straight forward
   <a href="/contribute/">contribution policy</a>.
 </p>
