--- a/_layouts/contribute.html
+++ b/_layouts/contribute.html
@@ -25,6 +25,11 @@ layout: base
       </li>
       {% endfor %}
       </ul>
+      <div class="sidebar-list-more">
+	To add your name to this list, modify
+	the <a href="https://github.com/guildai/tensorflow-patterns/blob/master/_data/contributors.yml">contributors
+	list</a> after making a contribution.
+      </div>
     </div>
   </div>
 </div>
