--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -15,16 +15,15 @@ layout: base
 
 <div class="container">
   <div class="row">
-    <div class="col-lg-4">
-      <h2>About</h2>
-      {% include content/about.html %}
-    </div>
-    <div class="col-lg-4">
+    <div class="col-md-8">
+      <div class="lead">
+	{% include content/about.html %}
+      </div>
       <h2>Method</h2>
       {% include content/method.html %}
     </div>
-    <div class="col-lg-4">
-      <h2>Popular patterns</h2>
+    <div class="col-md-4">
+      <h2 class="mt-0">Popular patterns</h2>
       {% include content/popular.html %}
     </div>
   </div>
