--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -1,5 +1,11 @@
 h2 {
     margin: 1.5rem 0 1rem;
+    font-size: 1.9rem;
+}
+
+h3 {
+    font-size: 1.6rem;
+    margin: 1rem 0 0.8rem;
 }
 
 .nav-item:first-child a.nav-link {
@@ -9,6 +15,7 @@ h2 {
 .jumbotron {
     background-color: #43A047;
     color: #fff;
+    border-radius: 0;
 }
 
 .jumbotron .text-muted {
@@ -23,7 +30,7 @@ h2 {
 }
 
 footer {
-    margin-top: 1.5rem;
+    margin-top: 4rem;
     padding: 3rem 0 3rem;
     background-color: #eee;
 }
